--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "connect-history-api-fallback": "^2.0.0",
     "core-js": "^3.8.3",
     "express": "^4.18.2",
     "vue": "^3.2.13",
