--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect-history-api-fallback": "^2.0.0",
     "core-js": "^3.8.3",
     "express": "^4.18.2",
+    "normalize.css": "^8.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
