--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.8.3",
     "express": "^4.18.2",
     "normalize.css": "^8.0.1",
+    "pinia": "^2.0.26",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
