--- a/.gitignore
+++ b/.gitignore
@@ -21,17 +21,4 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
-coverage/clover.xml
-coverage/coverage-final.json
-coverage/lcov.info
-coverage/lcov-report/base.css
-coverage/lcov-report/block-navigation.js
-coverage/lcov-report/favicon.png
-coverage/lcov-report/GenericButton.vue.html
-coverage/lcov-report/GenericInput.vue.html
-coverage/lcov-report/HelloWorld.vue.html
-coverage/lcov-report/index.html
-coverage/lcov-report/prettify.css
-coverage/lcov-report/prettify.js
-coverage/lcov-report/sort-arrow-sprite.png
-coverage/lcov-report/sorter.js
+/coverage
